syntax = "proto3";

package messages.device;

option go_package = "farm/src/proto/messages/device";

message CreateDeviceRequest {
  string device_serial = 1;
  string device_name = 2;
  string phone = 3;
  uint32 farm_id = 4;
}

message CreateDeviceResponse {
  bool status = 1;
  string error_message = 2;
}

message EditDeviceNameRequest {
  string device_serial = 1;
  string new_name = 2;
}

message EditDeviceNameResponse {
  bool status = 1;
  string error_message = 2;
}

message Device {
  string device_serial = 1;
  string device_name = 2;
  string phone = 3;
  uint32  farm_id = 4;
}
